# robostats_lab1

./: .gitignore  README.md
report/: approach.tex  future.tex  implementation.tex  main.tex  notation.tex  refs.bib  results.tex
src/particle_filter/: CMakeLists.txt  package.xml
src/particle_filter/config/: parameters.yaml
src/particle_filter/include/particle_filter/: ParticleFilter.h
src/particle_filter/launch/: test.launch
src/particle_filter/src/: ParticleFilter.cpp  particle_filter.cpp
src/particle_filter/vis/: test.rviz
