<package>
  <name>particle_filter</name>
  <version>0.0.0</version>
  <description>The particle_filter package</description>
  <maintainer email="johnyao@cmu.edu">Vishnu Desaraju</maintainer>
  <maintainer email="rajeswar@cmu.edu">Vishnu Desaraju</maintainer>
  <license>CRAPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  
</package>
